update unit test of database

--- a/tests/database.ipynb
+++ b/tests/database.ipynb
@@ -94,7 +94,7 @@
     "        self.df1 = pd.DataFrame({'col1' : [1,2,3,4,5] , 'col2' : [1,1,2,2,3] , 'col3' : [1,1,1,1,1]})\n",
     "        self.df2 = pd.DataFrame({'col1' : [4,5,6,7,8] , 'col2' : [3,3,4,4,5] , 'col3' : [2,2,2,2,2]})\n",
     "        self.table_name = 'unit_test_git'\n",
-    "        self.sql.sub_dump(self.df1, self.table_name ,mode_in = 'replace')\n",
+    "        self.sql.dump_main(self.df1, self.table_name ,mode_in = 'replace', partition_size=100)\n",
     "\n",
     "    def test_sp(self):\n",
     "        sql_q = \"\"\" CREATE OR ALTER PROCEDURE unit_test_git_SP (@PARAM1 AS VARCHAR(100))\n",
@@ -134,7 +134,16 @@
     "        expect_df = pd.DataFrame({'col1' : [1,2,3,4,5,6,7,8] , 'col2' : [1,1,2,3,3,4,4,5] , 'col3' : [1,1,1,2,2,2,2,2]})\n",
     "        result, expect = help_test(df_read, expect_df)\n",
     "        self.assertEqual(result, expect)\n",
-    "        \n",
+    "\n",
+    "    def test_replace_rollback(self) :\n",
+    "        df_error = self.df2.copy()\n",
+    "        df_error = df_error.rename(columns = {'col2' : 'col4'})\n",
+    "        self.sql.dump_replace(df_in = df_error, table_name_in = self.table_name, list_key = ['col1'])\n",
+    "        df_read = self.sql.read(self.table_name)\n",
+    "        expect_df = self.df1.copy()\n",
+    "        result, expect = help_test(df_read, expect_df)\n",
+    "        self.assertEqual(result, expect)\n",
+    "\n",
     "    def test_replace_blank(self) :\n",
     "        self.sql.dump_replace(df_in = self.df2.head(0) , table_name_in = self.table_name, list_key = ['col1'])\n",
     "        df_read = self.sql.read(self.table_name)\n",
@@ -276,7 +285,7 @@
     "        self.df1 = pd.DataFrame({'col1' : [1,2,3,4,5] , 'col2' : [1,1,2,2,3] , 'col3' : [1,1,1,1,1]})\n",
     "        self.df2 = pd.DataFrame({'col1' : [4,5,6,7,8] , 'col2' : [3,3,4,4,5] , 'col3' : [2,2,2,2,2]})\n",
     "        self.table_name = 'unit_test_git'\n",
-    "        self.sql.sub_dump(self.df1, self.table_name ,mode_in = 'replace')\n",
+    "        self.sql.dump_main(self.df1, self.table_name ,mode_in = 'replace', partition_size=100)\n",
     "        self.sql.parallel_dump = True\n",
     "        self.sql.max_parallel = 2\n",
     "        self.sql.partition_size = 2\n",
@@ -317,6 +326,15 @@
     "        self.sql.dump_replace(df_in = self.df2 , table_name_in = self.table_name, list_key = ['col1'])\n",
     "        df_read = self.sql.read(self.table_name)\n",
     "        expect_df = pd.DataFrame({'col1' : [1,2,3,4,5,6,7,8] , 'col2' : [1,1,2,3,3,4,4,5] , 'col3' : [1,1,1,2,2,2,2,2]})\n",
+    "        result, expect = help_test(df_read, expect_df)\n",
+    "        self.assertEqual(result, expect)\n",
+    "\n",
+    "    def test_replace_rollback(self) :\n",
+    "        df_error = self.df2.copy()\n",
+    "        df_error = df_error.rename(columns = {'col2' : 'col4'})\n",
+    "        self.sql.dump_replace(df_in = df_error, table_name_in = self.table_name, list_key = ['col1'])\n",
+    "        df_read = self.sql.read(self.table_name)\n",
+    "        expect_df = self.df1.copy()\n",
     "        result, expect = help_test(df_read, expect_df)\n",
     "        self.assertEqual(result, expect)\n",
     "        \n",
@@ -457,7 +475,7 @@
     "        self.df1 = pd.DataFrame({'col1' : [1,2,3,4,5] , 'col2' : [1,1,2,2,3] , 'col3' : [1,1,1,1,1]})\n",
     "        self.df2 = pd.DataFrame({'col1' : [4,5,6,7,8] , 'col2' : [3,3,4,4,5] , 'col3' : [2,2,2,2,2]})\n",
     "        self.table_name = 'unit_test_git'\n",
-    "        self.sql.sub_dump(self.df1, self.table_name ,mode_in = 'replace')\n",
+    "        self.sql.dump_main(self.df1, self.table_name ,mode_in = 'replace', partition_size=100)\n",
     "\n",
     "    def test_sp(self):\n",
     "        sql_q = \"\"\" CREATE OR ALTER PROCEDURE unit_test_git_SP (@PARAM1 AS VARCHAR(100))\n",
@@ -495,6 +513,15 @@
     "        self.sql.dump_replace(df_in = self.df2 , table_name_in = self.table_name, list_key = ['col1'])\n",
     "        df_read = self.sql.read(self.table_name)\n",
     "        expect_df = pd.DataFrame({'col1' : [1,2,3,4,5,6,7,8] , 'col2' : [1,1,2,3,3,4,4,5] , 'col3' : [1,1,1,2,2,2,2,2]})\n",
+    "        result, expect = help_test(df_read, expect_df)\n",
+    "        self.assertEqual(result, expect)\n",
+    "\n",
+    "    def test_replace_rollback(self) :\n",
+    "        df_error = self.df2.copy()\n",
+    "        df_error = df_error.rename(columns = {'col2' : 'col4'})\n",
+    "        self.sql.dump_replace(df_in = df_error, table_name_in = self.table_name, list_key = ['col1'])\n",
+    "        df_read = self.sql.read(self.table_name)\n",
+    "        expect_df = self.df1.copy()\n",
     "        result, expect = help_test(df_read, expect_df)\n",
     "        self.assertEqual(result, expect)\n",
     "        \n",
@@ -632,11 +659,12 @@
     "                                host_name = test_mysql['host'],\n",
     "                                database_name = test_mysql['database'],\n",
     "                                user = test_mysql['user'],\n",
-    "                                password = test_mysql['password'])\n",
+    "                                password = test_mysql['password'],\n",
+    "                                partition_size = 2, )\n",
     "        self.df1 = pd.DataFrame({'col1' : [1,2,3,4,5] , 'col2' : [1,1,2,2,3] , 'col3' : [1,1,1,1,1]})\n",
     "        self.df2 = pd.DataFrame({'col1' : [4,5,6,7,8] , 'col2' : [3,3,4,4,5] , 'col3' : [2,2,2,2,2]})\n",
     "        self.table_name = 'unit_test_git'\n",
-    "        self.sql.sub_dump(self.df1, self.table_name ,mode_in = 'replace')\n",
+    "        self.sql.dump_main(self.df1, self.table_name ,mode_in = 'replace', partition_size = 100)\n",
     "\n",
     "    def test_sp(self):\n",
     "        sql_q = \"\"\" drop procedure if exists unit_test_git_SP;\"\"\"\n",
@@ -676,6 +704,15 @@
     "        self.sql.dump_replace(df_in = self.df2 , table_name_in = self.table_name, list_key = ['col1'])\n",
     "        df_read = self.sql.read(self.table_name)\n",
     "        expect_df = pd.DataFrame({'col1' : [1,2,3,4,5,6,7,8] , 'col2' : [1,1,2,3,3,4,4,5] , 'col3' : [1,1,1,2,2,2,2,2]})\n",
+    "        result, expect = help_test(df_read, expect_df)\n",
+    "        self.assertEqual(result, expect)\n",
+    "\n",
+    "    def test_replace_rollback(self) :\n",
+    "        df_error = self.df2.copy()\n",
+    "        df_error = df_error.rename(columns = {'col2' : 'col4'})\n",
+    "        self.sql.dump_replace(df_in = df_error, table_name_in = self.table_name, list_key = ['col1'])\n",
+    "        df_read = self.sql.read(self.table_name)\n",
+    "        expect_df = self.df1.copy()\n",
     "        result, expect = help_test(df_read, expect_df)\n",
     "        self.assertEqual(result, expect)\n",
     "        \n",
@@ -819,7 +856,7 @@
     "        self.df1 = pd.DataFrame({'col1' : [1,2,3,4,5] , 'col2' : [1,1,2,2,3] , 'col3' : [1,1,1,1,1]})\n",
     "        self.df2 = pd.DataFrame({'col1' : [4,5,6,7,8] , 'col2' : [3,3,4,4,5] , 'col3' : [2,2,2,2,2]})\n",
     "        self.table_name = 'unit_test_git'\n",
-    "        self.sql.sub_dump(self.df1, self.table_name ,mode_in = 'replace')\n",
+    "        self.sql.dump_main(self.df1, self.table_name ,mode_in = 'replace', partition_size=100)\n",
     "\n",
     "    def test_sp(self):\n",
     "        sql_q = \"\"\" drop procedure if exists unit_test_git_SP;\"\"\"\n",
@@ -861,7 +898,16 @@
     "        expect_df = pd.DataFrame({'col1' : [1,2,3,4,5,6,7,8] , 'col2' : [1,1,2,3,3,4,4,5] , 'col3' : [1,1,1,2,2,2,2,2]})\n",
     "        result, expect = help_test(df_read, expect_df)\n",
     "        self.assertEqual(result, expect)\n",
-    "        \n",
+    "\n",
+    "    def test_replace_rollback(self) :\n",
+    "        df_error = self.df2.copy()\n",
+    "        df_error = df_error.rename(columns = {'col2' : 'col4'})\n",
+    "        self.sql.dump_replace(df_in = df_error, table_name_in = self.table_name, list_key = ['col1'])\n",
+    "        df_read = self.sql.read(self.table_name)\n",
+    "        expect_df = self.df1.copy()\n",
+    "        result, expect = help_test(df_read, expect_df)\n",
+    "        self.assertEqual(result, expect)\n",
+    "\n",
     "    def test_replace_blank(self) :\n",
     "        self.sql.dump_replace(df_in = self.df2.head(0) , table_name_in = self.table_name, list_key = ['col1'])\n",
     "        df_read = self.sql.read(self.table_name)\n",
@@ -997,7 +1043,7 @@
     "        self.df1 = pd.DataFrame({'col1' : [1,2,3,4,5] , 'col2' : [1,1,2,2,3] , 'col3' : [1,1,1,1,1]})\n",
     "        self.df2 = pd.DataFrame({'col1' : [4,5,6,7,8] , 'col2' : [3,3,4,4,5] , 'col3' : [2,2,2,2,2]})\n",
     "        self.table_name = 'unit_test_git'\n",
-    "        self.sql.sub_dump(self.df1,self.table_name,'replace')\n",
+    "        self.sql.dump_main(self.df1,self.table_name,'replace', partition_size= 100)\n",
     "#        self.df1.to_sql(self.table_name, con = self.sql.engine, index = False, if_exists = 'replace')\n",
     "\n",
     "    def test_sp(self):\n",
@@ -1013,7 +1059,6 @@
     "        expect_df = self.df1[self.df1['col1'] == 1]\n",
     "        result, expect = help_test(df_read, expect_df)\n",
     "        self.assertEqual(result, expect)\n",
-    "\n",
     "\n",
     "    def test_read_sql(self):\n",
     "        df_read = self.sql.read(self.table_name)\n",
@@ -1038,6 +1083,15 @@
     "        self.sql.dump_replace(df_in = self.df2 , table_name_in = self.table_name, list_key = ['col1'])\n",
     "        df_read = self.sql.read(self.table_name)\n",
     "        expect_df = pd.DataFrame({'col1' : [1,2,3,4,5,6,7,8] , 'col2' : [1,1,2,3,3,4,4,5] , 'col3' : [1,1,1,2,2,2,2,2]})\n",
+    "        result, expect = help_test(df_read, expect_df)\n",
+    "        self.assertEqual(result, expect)\n",
+    "\n",
+    "    def test_replace_rollback(self) :\n",
+    "        df_error = self.df2.copy()\n",
+    "        df_error = df_error.rename(columns = {'col2' : 'col4'})\n",
+    "        self.sql.dump_replace(df_in = df_error, table_name_in = self.table_name, list_key = ['col1'])\n",
+    "        df_read = self.sql.read(self.table_name)\n",
+    "        expect_df = self.df1.copy()\n",
     "        result, expect = help_test(df_read, expect_df)\n",
     "        self.assertEqual(result, expect)\n",
     "        \n",
@@ -1130,7 +1184,7 @@
     "    def test_replace_null1(self) :\n",
     "        df1_n = pd.DataFrame({'col1' : [1,None,3,4,5] , 'col2' : [1,1,2,2,3] , 'col3' : [1,1,1,1,1]})\n",
     "        df2_n = pd.DataFrame({'col1' : [4,5,6,7,None] , 'col2' : [3,3,4,4,5] , 'col3' : [2,2,2,2,2]})\n",
-    "        self.sql.sub_dump(df1_n,self.table_name,'replace')\n",
+    "        self.sql.dump_main(df1_n,self.table_name,'replace')\n",
     "#         df1_n.to_sql(self.table_name, con = self.sql.engine, index = False, if_exists = 'replace')\n",
     "        self.sql.dump_replace(df_in = df2_n , table_name_in = self.table_name, list_key = ['col1'] , debug = True)\n",
     "        df_read = self.sql.read(self.table_name).sort_values('col1').reset_index(drop = True)\n",
@@ -1141,7 +1195,7 @@
     "    def test_replace_null2(self) :\n",
     "        df1_n = pd.DataFrame({'col1' : [1,None,3,4,5] , 'col2' : [1,1,2,2,3] , 'col3' : [1,1,1,1,1]})\n",
     "        df2_n = pd.DataFrame({'col1' : [4,5,6,7,None] , 'col2' : [3,3,4,4,5] , 'col3' : [2,2,2,2,2]})\n",
-    "        self.sql.sub_dump(df1_n,self.table_name,'replace')\n",
+    "        self.sql.dump_main(df1_n,self.table_name,'replace')\n",
     "#         df1_n.to_sql(self.table_name, con = self.sql.engine, index = False, if_exists = 'replace')\n",
     "        self.sql.dump_replace(df_in = df2_n , table_name_in = self.table_name, list_key = ['col1','col2'] , debug = True)\n",
     "        df_read = self.sql.read(self.table_name).sort_values('col1').reset_index(drop = True)\n",
@@ -1192,7 +1246,7 @@
     "        self.df1 = pd.DataFrame({'col1' : [1,2,3,4,5] , 'col2' : [1,1,2,2,3] , 'col3' : [1,1,1,1,1]})\n",
     "        self.df2 = pd.DataFrame({'col1' : [4,5,6,7,8] , 'col2' : [3,3,4,4,5] , 'col3' : [2,2,2,2,2]})\n",
     "        self.table_name = 'unit_test_git'\n",
-    "        self.sql.sub_dump(self.df1, self.table_name ,mode_in = 'replace')\n",
+    "        self.sql.dump_main(self.df1, self.table_name ,mode_in = 'replace', partition_size= 100)\n",
     "\n",
     "#     def test_sp(self):\n",
     "#         sql_q = \"\"\" CREATE OR REPLACE PROCEDURE unit_test_git_SP (PARAM1 INT)\n",
@@ -1231,6 +1285,15 @@
     "        self.sql.dump_replace(df_in = self.df2 , table_name_in = self.table_name, list_key = ['col1'])\n",
     "        df_read = self.sql.read(self.table_name)\n",
     "        expect_df = pd.DataFrame({'col1' : [1,2,3,4,5,6,7,8] , 'col2' : [1,1,2,3,3,4,4,5] , 'col3' : [1,1,1,2,2,2,2,2]})\n",
+    "        result, expect = help_test(df_read, expect_df)\n",
+    "        self.assertEqual(result, expect)\n",
+    "\n",
+    "    def test_replace_rollback(self) :\n",
+    "        df_error = self.df2.copy()\n",
+    "        df_error = df_error.rename(columns = {'col2' : 'col4'})\n",
+    "        self.sql.dump_replace(df_in = df_error, table_name_in = self.table_name, list_key = ['col1'])\n",
+    "        df_read = self.sql.read(self.table_name)\n",
+    "        expect_df = self.df1.copy()\n",
     "        result, expect = help_test(df_read, expect_df)\n",
     "        self.assertEqual(result, expect)\n",
     "        \n",
@@ -1375,7 +1438,7 @@
     "        self.df1 = pd.DataFrame({'col1' : [1,2,3,4,5] , 'col2' : [1,1,2,2,3] , 'col3' : [1,1,1,1,1]})\n",
     "        self.df2 = pd.DataFrame({'col1' : [4,5,6,7,8] , 'col2' : [3,3,4,4,5] , 'col3' : [2,2,2,2,2]})\n",
     "        self.table_name = 'unit_test_git'\n",
-    "        self.sql.sub_dump(self.df1, self.table_name ,mode_in = 'replace')\n",
+    "        self.sql.dump_main(self.df1, self.table_name ,mode_in = 'replace', partition_size= 100)\n",
     "\n",
     "#     def test_sp(self):\n",
     "#         sql_q = \"\"\" CREATE OR REPLACE PROCEDURE unit_test_git_SP (PARAM1 INT)\n",
@@ -1414,6 +1477,15 @@
     "        self.sql.dump_replace(df_in = self.df2 , table_name_in = self.table_name, list_key = ['col1'])\n",
     "        df_read = self.sql.read(self.table_name)\n",
     "        expect_df = pd.DataFrame({'col1' : [1,2,3,4,5,6,7,8] , 'col2' : [1,1,2,3,3,4,4,5] , 'col3' : [1,1,1,2,2,2,2,2]})\n",
+    "        result, expect = help_test(df_read, expect_df)\n",
+    "        self.assertEqual(result, expect)\n",
+    "\n",
+    "    def test_replace_rollback(self) :\n",
+    "        df_error = self.df2.copy()\n",
+    "        df_error = df_error.rename(columns = {'col2' : 'col4'})\n",
+    "        self.sql.dump_replace(df_in = df_error, table_name_in = self.table_name, list_key = ['col1'])\n",
+    "        df_read = self.sql.read(self.table_name)\n",
+    "        expect_df = self.df1.copy()\n",
     "        result, expect = help_test(df_read, expect_df)\n",
     "        self.assertEqual(result, expect)\n",
     "        \n",
@@ -1553,7 +1625,7 @@
     "        self.df1 = pd.DataFrame({'col1' : [1,2,3,4,5] , 'col2' : [1,1,2,2,3] , 'col3' : [1,1,1,1,1]})\n",
     "        self.df2 = pd.DataFrame({'col1' : [4,5,6,7,8] , 'col2' : [3,3,4,4,5] , 'col3' : [2,2,2,2,2]})\n",
     "        self.table_name = 'unit_test_git'\n",
-    "        self.sql.sub_dump(self.df1, self.table_name ,mode_in = 'replace')\n",
+    "        self.sql.dump_main(self.df1, self.table_name ,mode_in = 'replace', partition_size=100)\n",
     "        \n",
     "    def test_read_sql(self):\n",
     "        df_read = self.sql.read(self.table_name)\n",
@@ -1579,6 +1651,15 @@
     "        self.sql.dump_replace(df_in = self.df2 , table_name_in = self.table_name, list_key = ['col1'])\n",
     "        df_read = self.sql.read(self.table_name)\n",
     "        expect_df = pd.DataFrame({'col1' : [1,2,3,4,5,6,7,8] , 'col2' : [1,1,2,3,3,4,4,5] , 'col3' : [1,1,1,2,2,2,2,2]})\n",
+    "        result, expect = help_test(df_read, expect_df)\n",
+    "        self.assertEqual(result, expect)\n",
+    "\n",
+    "    def test_replace_rollback(self) :\n",
+    "        df_error = self.df2.copy()\n",
+    "        df_error = df_error.rename(columns = {'col2' : 'col4'})\n",
+    "        self.sql.dump_replace(df_in = df_error, table_name_in = self.table_name, list_key = ['col1'])\n",
+    "        df_read = self.sql.read(self.table_name)\n",
+    "        expect_df = self.df1.copy()\n",
     "        result, expect = help_test(df_read, expect_df)\n",
     "        self.assertEqual(result, expect)\n",
     "        \n",
@@ -1704,7 +1785,7 @@
     "        self.df1 = pd.DataFrame({'col1' : [1,2,3,4,5] , 'col2' : [1,1,2,2,3] , 'col3' : [1,1,1,1,1]})\n",
     "        self.df2 = pd.DataFrame({'col1' : [4,5,6,7,8] , 'col2' : [3,3,4,4,5] , 'col3' : [2,2,2,2,2]})\n",
     "        self.table_name = 'unit_test_git'\n",
-    "        self.sql.sub_dump(self.df1, self.table_name ,mode_in = 'replace')\n",
+    "        self.sql.dump_main(self.df1, self.table_name ,mode_in = 'replace',partition_size=100)\n",
     "        \n",
     "    def test_read_sql(self):\n",
     "        df_read = self.sql.read(self.table_name)\n",
@@ -1732,7 +1813,16 @@
     "        expect_df = pd.DataFrame({'col1' : [1,2,3,4,5,6,7,8] , 'col2' : [1,1,2,3,3,4,4,5] , 'col3' : [1,1,1,2,2,2,2,2]})\n",
     "        result, expect = help_test(df_read, expect_df)\n",
     "        self.assertEqual(result, expect)\n",
-    "        \n",
+    "  \n",
+    "    def test_replace_rollback(self) :\n",
+    "        df_error = self.df2.copy()\n",
+    "        df_error = df_error.rename(columns = {'col2' : 'col4'})\n",
+    "        self.sql.dump_replace(df_in = df_error, table_name_in = self.table_name, list_key = ['col1'])\n",
+    "        df_read = self.sql.read(self.table_name)\n",
+    "        expect_df = self.df1.copy()\n",
+    "        result, expect = help_test(df_read, expect_df)\n",
+    "        self.assertEqual(result, expect)\n",
+    "\n",
     "    def test_replace_blank(self) :\n",
     "        self.sql.dump_replace(df_in = self.df2.head(0) , table_name_in = self.table_name, list_key = ['col1'])\n",
     "        df_read = self.sql.read(self.table_name)\n",
@@ -1835,11 +1925,21 @@
    "metadata": {},
    "outputs": [],
    "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
+  "interpreter": {
+   "hash": "de9f1e98d91541ea8e14294afe2cc1370eef7c1892b96b8ead4ce41ab544dcec"
+  },
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3.9.8 64-bit ('main': venv)",
    "language": "python",
    "name": "python3"
   },
