Add new port and timeout parameter in sample of email_sender

--- a/samples/email_sender.ipynb
+++ b/samples/email_sender.ipynb
@@ -70,7 +70,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "es = email_sender(user = mail_set['user'], password = mail_set['password'] , servername = mail_set['server'] )"
+    "es = email_sender(user = mail_set['user'], password = mail_set['password'] , servername = mail_set['server'] \n",
+    "                  , port = 0, timeout = 30)"
    ]
   },
   {
