Update lazy_API sample

--- a/samples/api.ipynb
+++ b/samples/api.ipynb
@@ -48,12 +48,13 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "c579bfd5",
    "metadata": {},
    "source": [
     "## Create API\n",
-    "*Currently support only POST method, with an input as a body*"
+    "### Post method with Body parameter"
    ]
   },
   {
@@ -71,11 +72,36 @@
     "\n",
     "# Create API from UDF\n",
     "def cal_2(x) :\n",
-    "    return x['10'] - x['20']\n",
+    "    return x['x'] - x['y']\n",
     "app.create_post(  function = cal_2\n",
     "                , name = 'cal_2'\n",
     "                , tags = ['cal'] # Default []\n",
     "                , example = {'x' : 10, 'y' : 20}) # Default {}"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "id": "ef49eaca",
+   "metadata": {},
+   "source": [
+    "### Get Method with Query parameter"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "44956928",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def cal_3(x, y) :\n",
+    "    return x + y\n",
+    "\n",
+    "# Create API from UDF (also work with Lambda)\n",
+    "app.create_get( function = cal_3\n",
+    "              , name = 'cal_3'\n",
+    "              , tags = ['cal_get']) # Default []"
    ]
   },
   {
@@ -101,13 +127,14 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "e8f626f0",
    "metadata": {},
    "source": [
     "---\n",
     "# Client\n",
-    "## If `api_weak_authen` is FALSE"
+    "## POST If `api_weak_authen` is FALSE"
    ]
   },
   {
@@ -129,11 +156,12 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "90e63377",
    "metadata": {},
    "source": [
-    "## If `api_weak_authen` is TRUE"
+    "## POST If `api_weak_authen` is TRUE"
    ]
   },
   {
@@ -148,6 +176,33 @@
     "r = requests.post('http://localhost:8080/cal_2'\n",
     "                 , json = {'username' : 'user' , 'password' : 'password'\n",
     "                           ,'x' : 10, 'y' : 20}\n",
+    "                 )\n",
+    "\n",
+    "print(r, r.content)"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "id": "8dea1823",
+   "metadata": {},
+   "source": [
+    "## GET If `api_weak_authen` is FALSE"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "4040f862",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import requests\n",
+    "from requests.auth import HTTPBasicAuth\n",
+    "\n",
+    "r = requests.get('http://localhost:8080/cal_3'\n",
+    "                 , json = {'x' : 10, 'y' : 20}\n",
+    "                 , auth=HTTPBasicAuth('user', 'password')\n",
     "                 )\n",
     "\n",
     "print(r, r.content)"
