--- a/samples/api.ipynb
+++ b/samples/api.ipynb
@@ -95,8 +95,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def cal_3(x, y) :\n",
-    "    return x + y\n",
+    "def cal_3(x) :\n",
+    "    return x['x'] + x['y']\n",
     "\n",
     "# Create API from UDF (also work with Lambda)\n",
     "app.create_get( function = cal_3\n",
@@ -201,8 +201,35 @@
     "from requests.auth import HTTPBasicAuth\n",
     "\n",
     "r = requests.get('http://localhost:8080/cal_3'\n",
-    "                 , json = {'x' : 10, 'y' : 20}\n",
+    "                 , params = {'x' : 10, 'y' : 20}\n",
     "                 , auth=HTTPBasicAuth('user', 'password')\n",
+    "                 )\n",
+    "\n",
+    "print(r, r.content)"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "id": "a76f737d",
+   "metadata": {},
+   "source": [
+    "## GET If `api_weak_authen` is TRUE"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "6ddfc9a3",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import requests\n",
+    "from requests.auth import HTTPBasicAuth\n",
+    "\n",
+    "r = requests.get('http://localhost:8080/cal_3'\n",
+    "                 , params = {'username' : 'user' , 'password' : 'password'\n",
+    "                            ,'x' : 10, 'y' : 20}\n",
     "                 )\n",
     "\n",
     "print(r, r.content)"
@@ -211,7 +238,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "main",
    "language": "python",
    "name": "python3"
   },
@@ -225,7 +252,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.8"
+   "version": "3.9.8 (tags/v3.9.8:bb3fdcf, Nov  5 2021, 20:48:33) [MSC v.1929 64 bit (AMD64)]"
+  },
+  "vscode": {
+   "interpreter": {
+    "hash": "de9f1e98d91541ea8e14294afe2cc1370eef7c1892b96b8ead4ce41ab544dcec"
+   }
   }
  },
  "nbformat": 4,
