Correct permission for signed_URL

--- a/samples/gcp.ipynb
+++ b/samples/gcp.ipynb
@@ -141,7 +141,7 @@
    "id": "7da859b6",
    "metadata": {},
    "source": [
-    "From version 0.3.17, upload method can also create the signed_url<br><br>\n",
+    "From version 0.3.17, upload method can also create the signed_url<br>But Need a additional permissions :  Storage Legacy Object Reader<br><br>\n",
     "Reference from : \n",
     "https://cloud.google.com/storage/docs/access-control/signing-urls-with-helpers#code-samples"
    ]
