Add more in lazy_API's document

--- a/samples/api.ipynb
+++ b/samples/api.ipynb
@@ -1,6 +1,7 @@
 {
  "cells": [
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "ce6e329d",
    "metadata": {},
@@ -24,6 +25,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "9aa57f58",
    "metadata": {},
@@ -43,8 +45,39 @@
     "                , description= 'testing api'\n",
     "                , username = 'user' # Default 'user'\n",
     "                , password = 'password' # Default 'password'\n",
+    "                , authen_type = 'basic' # Default 'basic'\n",
+    "                , validate_token = None # Default None\n",
     "                , api_weak_authen = False # Default False\n",
+    "                , callback = None # Default None\n",
+    "                , document = True # Default True\n",
     "              )"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "id": "26228245",
+   "metadata": {},
+   "source": [
+    " - title            : Name of the API that will display in document (Str)<br>\n",
+    " - version          : Version of the API that will display in document (Str)<br>\n",
+    " - description      : Description of the API that will display in document (Str)<br>\n",
+    " - username         :  User for Authenticate in Document and Basic Authen (Str), Default 'user'<br>\n",
+    " - password         : Password for Authenticate in Document and Basic Authen (Str), Default 'password'<br>\n",
+    " - authen_type      : Type of authentication ['basic','token',None], Default 'basic' <br>\n",
+    " - validate_token   : Validate Function or Token for Token Authen (Str or Function), Default None <br>\n",
+    " - api_weak_authen  : Move lazy_API's Authenticate To aviod conflict with GCP's authentication (Boolean), Default False <br>\n",
+    "    - GET API \n",
+    "        - Basic >> query 'username' and 'password' \n",
+    "        - Token >> query 'token' \n",
+    "    - POST API \n",
+    "        - Basic >> body 'username' and 'password' \n",
+    "        - Token >> body 'token' \n",
+    "<br><br>\n",
+    " - callback         :  A custom callback when API fail. The custom callback will feed with this dict below. (Function), Default None<br><br>\n",
+    "`{ 'traceback' : traceback.format_exc() , 'exception' : e , 'input' : query input for GET or body input for POST}`\n",
+    "<br><br>\n",
+    " - document         : To enable FastAPI's document or not (Boolean), Default True"
    ]
   },
   {
@@ -105,6 +138,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "3b623f74",
    "metadata": {},
@@ -252,7 +286,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.8 (tags/v3.9.8:bb3fdcf, Nov  5 2021, 20:48:33) [MSC v.1929 64 bit (AMD64)]"
+   "version": "3.9.8"
   },
   "vscode": {
    "interpreter": {
