--- a/samples/api.ipynb
+++ b/samples/api.ipynb
@@ -73,11 +73,8 @@
     "    - POST API \n",
     "        - Basic >> body 'username' and 'password' \n",
     "        - Token >> body 'token' \n",
-    "<br>\n",
     " - callback         :  A custom callback when API fail. The custom callback will feed with this dict below. (Function), Default None<br>\n",
-    "`{ 'traceback' : traceback.format_exc() \n",
-    ", 'exception' : e \n",
-    ", 'input' : query input for GET or body input for POST}`\n",
+    "`{ 'traceback' : traceback.format_exc() , 'exception' : e , 'input' : query input for GET or body input for POST}`\n",
     "<br>\n",
     " - document         : To enable FastAPI's document or not (Boolean), Default True"
    ]
