lazy_GCS > Add copy file sample

--- a/samples/gcp.ipynb
+++ b/samples/gcp.ipynb
@@ -258,6 +258,48 @@
     "                  , delete_folder = False # Delete Bucket Folder or not\n",
     "                  , deep_delete = False) # Delete all files in sub-folder(s) or not"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "3f095e83",
+   "metadata": {},
+   "source": [
+    "# Copy File"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c8dfc4b9",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "gcs.copy( source_bucket_file= '{The Source File on GCS that you want to copy}'\n",
+    "        , destination_bucket_name= '{Destination GCS Bucket}'\n",
+    "        , destination_bucket_file= '{Destination File Location on GCS}' # Leave as '' if you want to use same the path as the source file\n",
+    "        )"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "3e7457d0",
+   "metadata": {},
+   "source": [
+    "# Copy Folder"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "041ffd26",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "gcs.copy_folder( source_bucket_folder= '{The Source Folder on GCS that you want to copy}'\n",
+    "               , destination_bucket_name= '{Destination GCS Bucket}'\n",
+    "               , destination_bucket_folder=  '{Destination Folder on GCS}' # Leave as '' if you want to use same the path as the source folder\n",
+    "               )"
+   ]
   }
  ],
  "metadata": {
