Samples > lazy_API > Add examples' sample

--- a/samples/api.ipynb
+++ b/samples/api.ipynb
@@ -100,7 +100,9 @@
     "app.create_post(  function = lambda x : x['a'] + x['b'] # Use Lambda\n",
     "                , name = 'cal_1'\n",
     "                , tags = ['cal'] # Default []\n",
-    "                , example = {'a' : 1, 'b' : 2}) # Default {}\n",
+    "                , examples = {'a' : 1, 'b' : 2} # Default {}\n",
+    "                , example = {'a' : 1, 'b' : 2} # Default {}, Same as examples, will Deprecate soon, please use examples\n",
+    "                ) \n",
     "\n",
     "# Create API from UDF\n",
     "def cal_2(x) :\n",
